Finish problem 2 spelling bee